--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,19 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.staging.local
+.env.preview.local
+.env
+.env.development
+.env.test
+.env.production
+.env.staging
+.env.preview
