--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
     "@types/uuid": "^10.0.0",
+    "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
+    "onnxruntime-node": "^1.23.2",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
     "react-intersection-observer": "^10.0.0",
     "recharts": "^3.3.0"
