--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "onnxruntime-node": "^1.23.2",
+    "onnxruntime-web": "^1.23.2",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
